--- a/webapp/index.html
+++ b/webapp/index.html
@@ -16,16 +16,16 @@
 
     <script src="js/app.js"></script>
 </head>
-<body ng-controller="mainController">
+<body>
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <ul class="nav nav-pills">
         <li role="presentation" class="active"><a href="#">Home</a></li>
         <!--<li role="presentation"><a href="#">Tags</a></li>-->
-</ul>
-      </div>
+    </ul>
+  </div>
 </nav>
-<div class="container-fluid" ng-if="!activeQuery">
+<div class="container-fluid">
         <div id="titleDiv" class="row text-center">
             <h1>Tag Search</h1>
         </div>
@@ -33,39 +33,13 @@
             <div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center">
                 <div class="input-group" ng-controller="uploadCtrl">
                     <input type="file" file-model="myFile"/>
-                    <button ng-click="uploadFile()">upload me</button>
+                    <button ng-click="uploadFile()">upload me</button><br/>
+                    file_name : {{data.file_name}}<br/>
+                    classify_tags: {{data.classify_tags}}<br/>
+                    original_tags: {{data.origianl_tags}}
                 </div>
             </div>
         </div>
-</div>
-<div class="container-fluid" ng-if="activeQuery">
-    <div id="navDiv" class="row" style="padding-left: 3px; border-bottom: 0px black solid;">
-        <div class="col-lg-3 col-md-3" style="width: auto;">
-            <h1 style="margin-top: -6px; margin-bottom: 10px;">
-                Tag Search
-            </h1>
-        </div>
-
-        <div class="col-lg-4 col-md-4 col-sm-9 col-xs-11">
-            
-        </div>
-    </div>
-    <div class="row" ng-if="errorText">
-        <div class="col-sm-6">
-            <p class="status bg-danger">{{ errorText }}</p>
-        </div>
-    </div>
-    <div class="row" ng-if="delay">
-        <div class="col-sm-6 text-center">
-            <p class="status bg-info">{{ totalItems }} results ({{ delay }} seconds)</p>
-        </div>
-    </div>
-    <div class="result-holder"></div>
-    <div class="result-row row" ng-repeat="result in results">
-        <div class="col-sm-6" ng-bind-html="result">
-        </div>
-    </div>
-</div>
 </div>
 </body>
 </html>
