Try parital page

--- a/final_server/webapp/index.html
+++ b/final_server/webapp/index.html
@@ -23,8 +23,8 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <ul class="nav nav-pills">
-        <li role="presentation" class="active"><a href="/">Home</a></li>
-        <!--<li role="presentation"><a href="basic.html">Tags</a></li>-->
+        <li role="presentation" class="active"><a href="#/">Home</a></li>
+        <li role="presentation"><a href="#/oriSearch">Search</a></li>
     </ul>
   </div>
 </nav>
