--- a/final_server/webapp/index.html
+++ b/final_server/webapp/index.html
@@ -17,18 +17,21 @@
     <script src="lib/ng-flow.min.js"></script>
     <script src="js/app.js"></script>
     <script type="text/javascript">
-	$('ul.nav-pills.nav li a').click(function (e) {
-  		//alert('click');
-		$('ul.nav-pills li.active').removeClass('active');
-  		$(this).parent('li').addClass('active')
-	})
+    $(function(){
+        $('ul.nav.nav-pills li a').click(function (e) {
+            $('ul.nav-pills li.active').removeClass('active');
+            $(this).parent('li').addClass('active')
+        })
+    }); 
+
+	
     </script>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <ul class="nav nav-pills">
-        <li role="presentation"><a href="#/">Home</a></li>
+        <li role="presentation" class="active"><a href="#/">Home</a></li>
         <li role="presentation"><a href="#/oriSearch">Search</a></li>
     </ul>
   </div>
