--- a/final_server/webapp/index.html
+++ b/final_server/webapp/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/angular-block-ui.min.css"/>
     <title>Search Engine</title>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -15,6 +16,7 @@
     <script src="lib/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <script src="lib/ng-flow-standalone.min.js"></script>
     <script src="lib/ng-flow.min.js"></script>
+    <script src="lib/angular-block-ui.min.js"></script>
     <script src="js/app.js"></script>
     <script type="text/javascript">
     $(function(){
