--- a/final_server/webapp/index.html
+++ b/final_server/webapp/index.html
@@ -16,7 +16,7 @@
     <script src="lib/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <script src="lib/ng-flow-standalone.min.js"></script>
     <script src="lib/ng-flow.min.js"></script>
-    <script src="lib/angular-block-ui.min.js"></script>
+    <script src="lib/angular-block-ui/dist/angular-block-ui.min.js"></script>
     <script src="js/app.js"></script>
     <script type="text/javascript">
     $(function(){
